--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
       <!-- app header -->
       <p class="text-center display-4 m-4 fst-italic text-white fw-bold">
         Profile Generator
-        <span id="span-gender-icon" class="fst-normal">👨👩</span>
+        <span id="span-gender-icon" class="fst-normal">👩👨</span>
       </p>
 
       <!-- made by -->
       <p class="text-center m-3 text-white fs-5 fst-italic">
-        made by Chayanin Suatap 123456789
+        made by Nat Ucharattana 640610632
       </p>
 
       <!-- user card -->
